# info_panel

./: Cargo.toml
data/: openweathermap.conf  webdav.conf
data/styles/: styles.css
data/test/: calendar.xml  default_test.config  icalender_structure.txt  prop.xml  response.xml  vevent.ics  vtodo.ics
src/: filesystem.rs  main.rs
src/openweather_api/: city_entry.rs  mod.rs  parsing.rs  weather_entry.rs
src/webdav/: connection.rs  mod.rs  parsing.rs
src/webdav/calendar/: ical_object.rs  mod.rs  vevent.rs  vtimezone.rs  vtodo.rs
src/webdav/response/: mod.rs  prop.rs
src/website/: index.html  styles.css
