[package]
name = "planningscreen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
axum = "0.6.20"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
rustydav = "0.1.3"
quick-xml = "0.30.0"
chrono = "0.4.31"
icalendar = "0.15.7"
json = "0.12.4"
axum_static = "1.2.2"
dirs = "5.0.1"